--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
       "type": "git",
       "url": "https://github.com/Nodws/bootstrap4-tagsinput"
     },
+   "licenses": [
+    {
+      "name": "MIT",
+      "url": "https://github.com/Nodws/bootstrap4-tagsinput/blob/master/LICENSE"
+    }
+  ],
   "homepage": "https://github.com/Nodws/bootstrap4-tagsinput"
 }
