--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "bootstrap4-tagsinput",
+  "title": "Bootstrap 4 Tagsinput",
   "description": "jQuery tags input plugin based on Twitter Bootstrap 4",
-  "version": "4.1",
+  "version": "4.1.0",
   "repository":
     {
       "type": "git",
