--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository":
     {
       "type": "git",
-      "url": "https://github.com/Nodws/bootstrap4-tagsinput"
+      "url": "https://github.com/Nodws/bootstrap4-tagsinput.git"
     },
    "license": "MIT",
   "homepage": "https://github.com/Nodws/bootstrap4-tagsinput"
